--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Moskalets Portfolio</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -29,13 +29,17 @@
         >
         <nav class="nav header__nav">
           <ul class="nav__list">
-            <li class="nav__item"><a href="#" class="nav__link nav__link--current">home</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">about</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">service</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">portfolio</a></li>
+            <li class="nav__item">
+              <a href="./index.html" class="nav__link nav__link--current">home</a>
+            </li>
+            <li class="nav__item">
+              <a href="./about.html" class="nav__link">about</a>
+            </li>
+            <li class="nav__item"><a href="./service.html" class="nav__link">service</a></li>
+            <li class="nav__item"><a href="./portfolio.html" class="nav__link">portfolio</a></li>
           </ul>
         </nav>
-        <a href="" class="nav__link nav__link--contact">contact</a>
+        <a href="./contact.html" class="nav__link nav__link--contact">contact</a>
 
         <button class="mob-menu__btn--open js-menu-open">
           <svg class="mob-menu__icon--open" width="21px" height="13px">
@@ -57,11 +61,17 @@
             <nav class="mob-nav">
               <ul class="mob-nav__list">
                 <li class="mob-nav__item">
-                  <a href="#" class="mob-nav__link mob-nav__link--current">home</a>
+                  <a href="./index.html" class="mob-nav__link mob-nav__link--current">home</a>
                 </li>
-                <li class="mob-nav__item"><a href="#" class="mob-nav__link">about</a></li>
-                <li class="mob-nav__item"><a href="#" class="mob-nav__link">service</a></li>
-                <li class="mob-nav__item"><a href="#" class="mob-nav__link">portfolio</a></li>
+                <li class="mob-nav__item">
+                  <a href="/about.html" class="mob-nav__link">about</a>
+                </li>
+                <li class="mob-nav__item">
+                  <a href="./service.html" class="mob-nav__link">service</a>
+                </li>
+                <li class="mob-nav__item">
+                  <a href="./portfolio.html" class="mob-nav__link">portfolio</a>
+                </li>
               </ul>
             </nav>
             <div class="mob-contacts">
@@ -567,24 +577,24 @@
           <address class="footer__address">
             <ul class="footer__contact-list">
               <li class="footer__contact-item">
-                <a class="footer__contact-link" href="tel:+380961111111">
+                <a class="footer__contact-link" href="tel:+380685856991">
                   <svg class="footer__contact-icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-phone"></use>
                   </svg>
                   <div class="footer__contact-info">
                     <p class="footer__contact-type">Phone</p>
-                    <p class="footer__contact-detail">(219) 555-0114</p>
+                    <p class="footer__contact-detail">+38 (068) 585-69-91</p>
                   </div>
                 </a>
               </li>
               <li class="footer__contact-item">
-                <a class="footer__contact-link" href="mailto:info@devstudio.com">
+                <a class="footer__contact-link" href="mailto:oleksandr.moskalets.dev@gmail.com">
                   <svg class="footer__contact-icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-email"></use>
                   </svg>
                   <div class="footer__contact-info">
                     <p class="footer__contact-type">Email</p>
-                    <p class="footer__contact-detail">robertfox@example.com</p>
+                    <p class="footer__contact-detail">oleksandr.moskalets.dev@gmail.com</p>
                   </div>
                 </a>
               </li>
@@ -595,9 +605,7 @@
                   </svg>
                   <div class="footer__contact-info">
                     <p class="footer__contact-type">Address</p>
-                    <p class="footer__contact-detail">
-                      4517 Washington Ave. Manchester, Kentucky 39495
-                    </p>
+                    <p class="footer__contact-detail">Kyiv, Ukraine</p>
                   </div>
                 </a>
               </li>
