--- a/service.html
+++ b/service.html
@@ -34,11 +34,9 @@
               <a href="./about.html" class="nav__link">about</a>
             </li>
             <li class="nav__item">
-              <a href="./service.html" class="nav__link">service</a>
+              <a href="./service.html" class="nav__link nav__link--current">service</a>
             </li>
-            <li class="nav__item">
-              <a href="./portfolio.html" class="nav__link nav__link--current">portfolio</a>
-            </li>
+            <li class="nav__item"><a href="./portfolio.html" class="nav__link">portfolio</a></li>
           </ul>
         </nav>
         <a href="./contact.html" class="nav__link nav__link--contact">contact</a>
@@ -69,12 +67,10 @@
                   <a href="/about.html" class="mob-nav__link">about</a>
                 </li>
                 <li class="mob-nav__item">
-                  <a href="./service.html" class="mob-nav__link">service</a>
+                  <a href="./service.html" class="mob-nav__link mob-nav__link--current">service</a>
                 </li>
                 <li class="mob-nav__item">
-                  <a href="./portfolio.html" class="mob-nav__link mob-nav__link--current"
-                    >portfolio</a
-                  >
+                  <a href="./portfolio.html" class="mob-nav__link">portfolio</a>
                 </li>
               </ul>
             </nav>
@@ -135,159 +131,7 @@
         </div>
       </div>
     </header>
-    <main class="main">
-      <section class="portfolio section">
-        <div class="container">
-          <div class="portfolio__content">
-            <h2 class="title"><span class="title-accent">03</span>portfolio</h2>
-            <ul class="portfolio__filter">
-              <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button portfolio__filter-button--current">
-                  ALL
-                </button>
-              </li>
-              <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">ui-ux</button>
-              </li>
-              <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">PRODUCT-DESIGN</button>
-              </li>
-              <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">WEB-DESIGN</button>
-              </li>
-            </ul>
-          </div>
-          <ul class="portfolio__list portfolio__list--portfoio" portfolio-list>
-            <li class="portfolio__item portfolio__item--portfolio ui-ux">
-              <a class="portfolio__item-link link" href="#">
-                <div class="portfolio__item-img-wrap">
-                  <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
-                  <p class="portfolio__item-overlay">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus
-                    obcaecati a quam non perferendis laboriosam maiores modi laborum mollitia natus
-                    possimus minima, soluta recusandae illum reiciendis! Corporis, repellat!
-                    Repellat.
-                  </p>
-                </div>
-                <div class="portfolio__item-content">
-                  <h3 class="portfolio__item-title">Mobile desing</h3>
-                  <p class="portfolio__item-subtitle">UI/UX Design</p>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio__item portfolio__item--portfolio product-design">
-              <a class="portfolio__item-link link" href="#">
-                <div class="portfolio__item-img-wrap">
-                  <img
-                    src="./images/portfolio2.jpg"
-                    width="364"
-                    height="249"
-                    alt=""
-                    class="portfolio__item-img"
-                  />
-                  <p class="portfolio__item-overlay">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus
-                    obcaecati a quam non perferendis laboriosam maiores modi laborum mollitia natus
-                    possimus minima, soluta recusandae illum reiciendis! Corporis, repellat!
-                    Repellat.
-                  </p>
-                </div>
-                <div class="portfolio__item-content">
-                  <h3 class="portfolio__item-title">Mobile desing</h3>
-                  <p class="portfolio__item-subtitle">UI/UX Design</p>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio__item portfolio__item--portfolio web-design">
-              <a class="portfolio__item-link link" href="#">
-                <div class="portfolio__item-img-wrap">
-                  <img
-                    src="./images/portfolio3.jpg"
-                    width="364"
-                    height="249"
-                    alt=""
-                    class="portfolio__item-img"
-                  />
-                  <p class="portfolio__item-overlay">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus
-                    obcaecati a quam non perferendis laboriosam maiores modi laborum mollitia natus
-                    possimus minima, soluta recusandae illum reiciendis! Corporis, repellat!
-                    Repellat.
-                  </p>
-                </div>
-                <div class="portfolio__item-content">
-                  <h3 class="portfolio__item-title">Mobile desing</h3>
-                  <p class="portfolio__item-subtitle">UI/UX Design</p>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio__item portfolio__item--portfolio ui-ux">
-              <a class="portfolio__item-link link" href="#">
-                <div class="portfolio__item-img-wrap">
-                  <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
-                  <p class="portfolio__item-overlay">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus
-                    obcaecati a quam non perferendis laboriosam maiores modi laborum mollitia natus
-                    possimus minima, soluta recusandae illum reiciendis! Corporis, repellat!
-                    Repellat.
-                  </p>
-                </div>
-                <div class="portfolio__item-content">
-                  <h3 class="portfolio__item-title">Mobile desing</h3>
-                  <p class="portfolio__item-subtitle">UI/UX Design</p>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio__item portfolio__item--portfolio product-design">
-              <a class="portfolio__item-link link" href="#">
-                <div class="portfolio__item-img-wrap">
-                  <img
-                    src="./images/portfolio2.jpg"
-                    width="364"
-                    height="249"
-                    alt=""
-                    class="portfolio__item-img"
-                  />
-                  <p class="portfolio__item-overlay">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus
-                    obcaecati a quam non perferendis laboriosam maiores modi laborum mollitia natus
-                    possimus minima, soluta recusandae illum reiciendis! Corporis, repellat!
-                    Repellat.
-                  </p>
-                </div>
-                <div class="portfolio__item-content">
-                  <h3 class="portfolio__item-title">Mobile desing</h3>
-                  <p class="portfolio__item-subtitle">UI/UX Design</p>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio__item portfolio__item--portfolio web-design">
-              <a class="portfolio__item-link link" href="#">
-                <div class="portfolio__item-img-wrap">
-                  <img
-                    src="./images/portfolio3.jpg"
-                    width="364"
-                    height="249"
-                    alt=""
-                    class="portfolio__item-img"
-                  />
-                  <p class="portfolio__item-overlay">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus
-                    obcaecati a quam non perferendis laboriosam maiores modi laborum mollitia natus
-                    possimus minima, soluta recusandae illum reiciendis! Corporis, repellat!
-                    Repellat.
-                  </p>
-                </div>
-                <div class="portfolio__item-content">
-                  <h3 class="portfolio__item-title">Mobile desing</h3>
-                  <p class="portfolio__item-subtitle">UI/UX Design</p>
-                </div>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
+    <main class="main"></main>
     <footer class="footer section">
       <div class="container footer-container">
         <div class="footer__content">
