--- a/index.html
+++ b/index.html
@@ -234,39 +234,44 @@
           <h2 class="visually-hidden">Stacks</h2>
           <ul class="stacks__list">
             <li class="stacks__item">
-              <a class="stacks__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                <svg class="stacks__icon" width="105" height="28">
-                  <use href="./images/symbol-defs.svg#icon-group"></use>
-                </svg>
-              </a>
+              <svg class="stacks__icon" width="105" height="28">
+                <use href="./images/symbol-defs.svg#icon-trello"></use>
+              </svg>
             </li>
             <li class="stacks__item">
-              <a class="stacks__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                <svg class="stacks__icon" width="105" height="28">
-                  <use href="./images/symbol-defs.svg#icon-group"></use>
-                </svg>
-              </a>
+              <svg class="stacks__icon" width="105" height="28">
+                <use href="./images/symbol-defs.svg#icon-sass"></use>
+              </svg>
             </li>
             <li class="stacks__item">
-              <a class="stacks__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                <svg class="stacks__icon" width="105" height="28">
-                  <use href="./images/symbol-defs.svg#icon-group"></use>
-                </svg>
-              </a>
+              <svg class="stacks__icon" width="105" height="28">
+                <use href="./images/symbol-defs.svg#icon-slack"></use>
+              </svg>
             </li>
             <li class="stacks__item">
-              <a class="stacks__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                <svg class="stacks__icon" width="105" height="28">
-                  <use href="./images/symbol-defs.svg#icon-github"></use>
-                </svg>
-              </a>
+              <svg class="stacks__icon" width="105" height="28">
+                <use href="./images/symbol-defs.svg#icon-node"></use>
+              </svg>
             </li>
             <li class="stacks__item">
-              <a class="stacks__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                <svg class="stacks__icon" width="105" height="28">
-                  <use href="./images/symbol-defs.svg#icon-group"></use>
-                </svg>
-              </a>
+              <svg class="stacks__icon" width="105" height="28">
+                <use href="./images/symbol-defs.svg#icon-react"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="105" height="28">
+                <use href="./images/symbol-defs.svg#icon-github2"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="105" height="28">
+                <use href="./images/symbol-defs.svg#icon-js"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="105" height="28">
+                <use href="./images/symbol-defs.svg#icon-html-five2"></use>
+              </svg>
             </li>
           </ul>
           <div class="stacks__actions">
