--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
             <use href="./images/symbol-defs.svg#close-icon"></use>
           </svg>
         </button>
-        <b class="modal__title">Напиши мені, якщо у тебе залишилися запитання</b>
+        <b class="modal__title">Email me if you have any questions</b>
         <form class="modal__form modal-form">
           <div class="modal-form__field">
             <label for="name" class="modal-form__contact-label">Ім'я</label>
