--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header class="header header-js">
       <div class="container header-container">
-        <a href="/index.html" lang="en" class="logo header__logo">
+        <a href="./index.html" lang="en" class="logo header__logo">
           <span class="logo-letter">M</span>
           <span class="logo-letter">O</span></a
         >
@@ -48,7 +48,7 @@
         </button>
 
         <div class="mob-menu-container js-menu-container">
-          <a href="/index.html" lang="en" class="logo header__logo">
+          <a href="./index.html" lang="en" class="logo header__logo">
             <span class="logo-letter">M</span>
             <span class="logo-letter">O</span></a
           >
