--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
         <b class="modal__title">Email me if you have any questions</b>
         <form class="modal__form modal-form">
           <div class="modal-form__field">
-            <label for="name" class="modal-form__contact-label">Ім'я</label>
+            <label for="name" class="modal-form__contact-label">Name</label>
             <div class="modal-form__input-wrap">
               <input
                 type="text"
@@ -739,7 +739,7 @@
             </div>
           </div>
           <div class="modal-form__field">
-            <label for="tel" class="modal-form__contact-label">Телефон</label>
+            <label for="tel" class="modal-form__contact-label">Phone number</label>
             <div class="modal-form__input-wrap">
               <input
                 type="tel"
@@ -755,7 +755,7 @@
             </div>
           </div>
           <div class="modal-form__field">
-            <label for="mail" class="modal-form__contact-label">Пошта</label>
+            <label for="mail" class="modal-form__contact-label">Email</label>
             <div class="modal-form__input-wrap">
               <input
                 type="email"
@@ -770,7 +770,7 @@
             </div>
           </div>
           <div class="modal-form__field">
-            <label for="comment" class="modal-form__contact-label">Коментар</label>
+            <label for="comment" class="modal-form__contact-label">Comment</label>
             <textarea
               name="comment"
               id="comment"
@@ -778,7 +778,7 @@
               placeholder="Введіть текст"
             ></textarea>
           </div>
-          <button type="submit" class="modal-form__btn button">Відправити</button>
+          <button type="submit" class="modal-form__btn button">Send</button>
         </form>
         <button type="button" class="stacks__download-button stacks__download-button--modal">
           <svg class="stacks__download-icon" width="16" height="16">
