--- a/index.html
+++ b/index.html
@@ -230,46 +230,46 @@
         </div>
       </section>
       <section class="stacks section">
-        <div class="container">
+        <div class="container stacks-container">
           <h2 class="visually-hidden">Stacks</h2>
           <ul class="stacks__list">
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
+              <svg class="stacks__icon" width="25" height="25">
                 <use href="./images/symbol-defs.svg#icon-trello"></use>
               </svg>
             </li>
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
+              <svg class="stacks__icon" width="35" height="27">
                 <use href="./images/symbol-defs.svg#icon-sass"></use>
               </svg>
             </li>
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
+              <svg class="stacks__icon" width="105" height="26">
                 <use href="./images/symbol-defs.svg#icon-slack"></use>
               </svg>
             </li>
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
+              <svg class="stacks__icon" width="35" height="22">
                 <use href="./images/symbol-defs.svg#icon-node"></use>
               </svg>
             </li>
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
+              <svg class="stacks__icon" width="28" height="25">
                 <use href="./images/symbol-defs.svg#icon-react"></use>
               </svg>
             </li>
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
-                <use href="./images/symbol-defs.svg#icon-github2"></use>
+              <svg class="stacks__icon" width="28" height="28">
+                <use href="./images/symbol-defs.svg#icon-git"></use>
               </svg>
             </li>
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
+              <svg class="stacks__icon" width="28" height="25">
                 <use href="./images/symbol-defs.svg#icon-js"></use>
               </svg>
             </li>
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
+              <svg class="stacks__icon" width="25" height="28">
                 <use href="./images/symbol-defs.svg#icon-html-five2"></use>
               </svg>
             </li>
