--- a/portfolio.html
+++ b/portfolio.html
@@ -136,10 +136,68 @@
       </div>
     </header>
     <main class="main">
+      <section class="portfolio-hero">
+        <div class="container portfolio-hero-container">
+          <h1 class="portfolio-hero__title">Portfolio</h1>
+          <!-- <button class="portfolio-hero__cta-button button open-modal-button">Get in touch</button> -->
+          <div class="portfolio-hero__social-links">
+            <ul class="socials socials">
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="https://t.me/lexandrOl"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-telegram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="https://github.com/MoskaletsOleksandr"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-github1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="www.linkedin.com/in/oleksandr-moskalets"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="https://www.instagram.com/batyasanych"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
       <section class="portfolio section">
         <div class="container">
           <div class="portfolio__content">
-            <h2 class="title"><span class="title-accent">03</span>portfolio</h2>
+            <h2 class="title"><span class="title-accent">01</span>portfolio</h2>
             <ul class="portfolio__filter">
               <li class="portfolio__filter-item">
                 <button class="portfolio__filter-button portfolio__filter-button--current">
@@ -285,6 +343,96 @@
               </a>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="stacks section">
+        <div class="container stacks-container">
+          <h2 class="title stacks-title"><span class="title-accent">02</span>Stacks</h2>
+          <ul class="stacks__list">
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="25" height="25">
+                <use href="./images/symbol-defs.svg#icon-trello"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="35" height="27">
+                <use href="./images/symbol-defs.svg#icon-sass"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="105" height="26">
+                <use href="./images/symbol-defs.svg#icon-slack"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="35" height="22">
+                <use href="./images/symbol-defs.svg#icon-node"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="28" height="25">
+                <use href="./images/symbol-defs.svg#icon-react"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="28" height="28">
+                <use href="./images/symbol-defs.svg#icon-git"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="28" height="25">
+                <use href="./images/symbol-defs.svg#icon-js"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="25" height="28">
+                <use href="./images/symbol-defs.svg#icon-html-five2"></use>
+              </svg>
+            </li>
+          </ul>
+          <div class="stacks__actions">
+            <h3 class="stacks__actions-title">let’s work together on Your Next Project</h3>
+            <button class="stacks__hire-button button open-modal-button">HIRE ME NOW</button>
+            <button type="button" class="stacks__download-button">
+              <svg class="stacks__download-icon" width="16" height="16">
+                <use href="./images/symbol-defs.svg#icon-vector-btn"></use>
+              </svg>
+              Download CV
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="questions section">
+        <div class="container questions-container">
+          <h2 class="title questions-title">
+            <span class="title-accent">03</span>HAVE ANY QUESTIONS?
+          </h2>
+          <div class="faq">
+            <div class="faq-item">
+              <input type="checkbox" class="faq-input" id="faq_1" />
+              <label for="faq_1" class="faq-title">Lorem ipsum dolor sit amet.</label>
+              <div class="faq-text">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, porro incidunt!
+                  Officia officiis, nemo voluptatum voluptate sint quam, exercitationem corporis id,
+                  ut eius mollitia commodi. Voluptatibus, voluptates tenetur ab praesentium,
+                  explicabo dolorem repellat, eius magni eveniet minus adipisci cum consequatur!
+                </p>
+              </div>
+            </div>
+            <div class="faq-item">
+              <input type="checkbox" class="faq-input" id="faq_1" />
+              <label for="faq_1" class="faq-title">Lorem ipsum dolor sit amet.</label>
+              <div class="faq-text">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, porro incidunt!
+                  Officia officiis, nemo voluptatum voluptate sint quam, exercitationem corporis id,
+                  ut eius mollitia commodi. Voluptatibus, voluptates tenetur ab praesentium,
+                  explicabo dolorem repellat, eius magni eveniet minus adipisci cum consequatur!
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
