--- a/portfolio.html
+++ b/portfolio.html
@@ -138,8 +138,7 @@
     <main class="main">
       <section class="portfolio-hero">
         <div class="container portfolio-hero-container">
-          <h1 class="portfolio-hero__title">Portfolio</h1>
-          <!-- <button class="portfolio-hero__cta-button button open-modal-button">Get in touch</button> -->
+          <h1 class="portfolio-hero__title title">Portfolio</h1>
           <div class="portfolio-hero__social-links">
             <ul class="socials socials">
               <li class="socials__item">
@@ -409,7 +408,7 @@
           </h2>
           <div class="faq">
             <div class="faq-item">
-              <input type="checkbox" class="faq-input" id="faq_1" />
+              <input type="checkbox" class="faq-input visually-hidden" id="faq_1" />
               <label for="faq_1" class="faq-title">Lorem ipsum dolor sit amet.</label>
               <div class="faq-text">
                 <p>
@@ -421,8 +420,20 @@
               </div>
             </div>
             <div class="faq-item">
-              <input type="checkbox" class="faq-input" id="faq_1" />
-              <label for="faq_1" class="faq-title">Lorem ipsum dolor sit amet.</label>
+              <input type="checkbox" class="faq-input visually-hidden" id="faq_2" />
+              <label for="faq_2" class="faq-title">Lorem ipsum dolor sit amet.</label>
+              <div class="faq-text">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, porro incidunt!
+                  Officia officiis, nemo voluptatum voluptate sint quam, exercitationem corporis id,
+                  ut eius mollitia commodi. Voluptatibus, voluptates tenetur ab praesentium,
+                  explicabo dolorem repellat, eius magni eveniet minus adipisci cum consequatur!
+                </p>
+              </div>
+            </div>
+            <div class="faq-item">
+              <input type="checkbox" class="faq-input visually-hidden" id="faq_3" />
+              <label for="faq_3" class="faq-title">Lorem ipsum dolor sit amet.</label>
               <div class="faq-text">
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, porro incidunt!
@@ -439,7 +450,7 @@
     <footer class="footer section">
       <div class="container footer-container">
         <div class="footer__content">
-          <h2 class="title footer-title"><span class="title-accent">05</span>contact</h2>
+          <h2 class="title footer-title"><span class="title-accent">04</span>contact</h2>
           <address class="footer__address">
             <ul class="footer__contact-list">
               <li class="footer__contact-item">
@@ -573,6 +584,82 @@
         </div>
       </div>
     </footer>
+
+    <div id="contactModal" class="backdrop is-hidden">
+      <div class="modal">
+        <button id="modal__close-btn" type="button" class="modal__close-btn close-btn">
+          <svg class="close-btn__icon" width="30" height="30">
+            <use href="./images/symbol-defs.svg#close-icon"></use>
+          </svg>
+        </button>
+        <b class="modal__title">Email me if you have any questions</b>
+        <form class="modal__form modal-form">
+          <div class="modal-form__field">
+            <label for="name" class="modal-form__contact-label">Name</label>
+            <div class="modal-form__input-wrap">
+              <input
+                type="text"
+                name="name"
+                id="name"
+                class="modal-form__input modal-form__input--left-padding"
+                placeholder=" "
+                required
+              />
+              <svg class="modal-form__icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-person-form"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form__field">
+            <label for="tel" class="modal-form__contact-label">Phone number</label>
+            <div class="modal-form__input-wrap">
+              <input
+                type="tel"
+                name="tel"
+                id="tel"
+                class="modal-form__input modal-form__input--left-padding"
+                placeholder=" "
+                required
+              />
+              <svg class="modal-form__icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-phone-form"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form__field">
+            <label for="mail" class="modal-form__contact-label">Email</label>
+            <div class="modal-form__input-wrap">
+              <input
+                type="email"
+                name="mail"
+                id="mail"
+                class="modal-form__input modal-form__input--left-padding"
+                placeholder=" "
+              />
+              <svg class="modal-form__icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-email-form"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form__field">
+            <label for="comment" class="modal-form__contact-label">Comment</label>
+            <textarea
+              name="comment"
+              id="comment"
+              class="modal-form__comment modal-form__input"
+              placeholder="Введіть текст"
+            ></textarea>
+          </div>
+          <button type="submit" class="modal-form__btn button">Send</button>
+        </form>
+        <button type="button" class="stacks__download-button stacks__download-button--modal">
+          <svg class="stacks__download-icon" width="16" height="16">
+            <use href="./images/symbol-defs.svg#icon-vector-btn"></use>
+          </svg>
+          Download CV
+        </button>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script type="module" src="./js/script.js"></script>
